k8s-specifications/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db

spec:
  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine

        ports:
        - containerPort: 5432
          name: postgres

        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data

      volumes:
      - name: db-data
        emptyDir: {}
